Updated with 2.0 version information